<resources>
    <string name="app_name">MOA</string>
    <string name="hello_moa">Hello MOA!</string>

    <string name="nav_home">MOA</string>
    <string name="nav_meeting">Meeting</string>
    <string name="nav_settings">설정</string>
    <string name="nav_meeting_upload">회의록 작성</string>
    <string name="nav_meeting_summary">회의 요약</string>
    <string name="nav_recording">녹음</string>

    <string name="home_title">MOA 홈</string>
    <string name="meeting_title">회의 진행</string>
    <string name="settings_screen_title">설정</string>
    <string name="settings_logout">로그아웃</string>

    <string name="home_header">MOA - AI 회의록</string>
    <string name="home_add_meeting">+ 회의록 추가</string>
    <string name="add_next">다음</string>
    <string name="add_folder_select">폴더 선택</string>
    <string name="add_meeting_create">회의록 작성</string>
    <string name="add_method_title">회의 자료 업로드</string>
    <string name="add_document_upload">문서 파일 업로드</string>
    <string name="add_document_mime_rejected">형식은 PDF, PNG, JPEG, WEBP만 가능합니다.</string>
    <string name="add_document_added">선택한 문서: %1$s</string>
    <string name="add_summarize">요약</string>
    <string name="create">생성</string>
    <string name="summary_done">완료</string>
    <string name="select">선택</string>
    <string name="recording_summarize">요약하기</string>
    <string name="recording_done">녹음 완료</string>
    <string name="recording_play">재생</string>
    <string name="recording_record">녹음</string>
    <string name="recording_save_file">녹음 파일 저장</string>
    <string name="recording_save_dialog_title">녹음 파일 저장</string>
    <string name="recording_save_hint">녹음 파일 제목</string>
    <string name="recording_save_confirm">저장</string>
    <string name="recording_no_file">저장할 녹음 파일이 없습니다.</string>
    <string name="recording_playback_failed">재생을 시작할 수 없습니다.</string>
    <string name="local_export_recording_failed">Recordings 폴더에 저장하지 못했습니다. 로그를 확인해 주세요.</string>
    <string name="local_export_photo_failed">Photos 폴더에 저장하지 못했습니다. 로그를 확인해 주세요.</string>
    <string name="toast_file_saved_as">\"%1$s\"이(가) 저장되었습니다.</string>
    <string name="toast_scan_saved_pages">\"%1$s\"이(가) 저장되었습니다. (스캔 %2$d페이지)</string>
    <string name="toast_scan_export_failed">스캔 %1$d페이지: 공용 폴더에 저장하지 못했습니다.</string>
    <string name="toast_scan_copy_failed">스캔 파일을 앱에 복사하지 못했습니다.</string>
    <string name="toast_scan_no_file">스캔 결과 파일이 없습니다.</string>
    <string name="summarizing_title">요약 중</string>
    <string name="summarizing_message">회의 내용을 분석하고 있습니다…</string>
    <string name="summarizing_error_generic">요약 처리 중 오류가 발생했습니다.</string>
    <string name="summarizing_go_home">홈으로</string>
    <string name="summarizing_eta_remaining">예상 남은 시간: 약 %1$d분 %2$d초</string>
    <string name="summary_complete_toast">요약이 완료되었습니다.</string>
    <string name="summary_panel_expand">펼치기</string>
    <string name="summary_panel_collapse">접기</string>
    <string name="summary_panel_expand_icon">&gt;</string>
    <string name="summary_panel_collapse_icon">&lt;</string>
    <string name="summary_chevron_left">&lt;</string>
    <string name="summary_chevron_right">&gt;</string>
    <string name="summary_panel_complete">요약 완료</string>
    <string name="summary_panel_failed_short">오류</string>
    <string name="summary_panel_view_result">요약 확인</string>
    <string name="summary_panel_eta_minutes_left">%d분 남음</string>
    <string name="summary_panel_eta_seconds_left">%d초 남음</string>
    <string name="summary_panel_queue_banner">요약 대기 %d건</string>
    <string name="summary_panel_generating_short">요약 생성 중…</string>
    <string name="summary_panel_background_pending">백그라운드에서 요약 생성 중입니다. 완료되면 알려드립니다.</string>
    <string name="summary_panel_background_pending_short">백그라운드 처리 중</string>

    <string name="login_title">로그인</string>
    <string name="login_subtitle">MOA 회의록 서비스를 이용하려면 로그인하세요.</string>
    <string name="login_email_hint">아이디</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="signup_button">회원가입</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_subtitle">새 계정을 만들고 MOA 회의록 서비스를 시작하세요.</string>
    <string name="signup_confirm_password_hint">비밀번호 확인</string>
    <string name="signup_back_to_login">로그인으로 돌아가기</string>
    <string name="login_error_empty">아이디와 비밀번호를 입력해 주세요.</string>
    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="signup_complete">회원가입이 완료되었습니다. 로그인합니다.</string>
    <string name="signup_failed">회원가입에 실패했습니다.</string>
    <string name="signup_error_empty">아이디와 비밀번호를 모두 입력해 주세요.</string>
    <string name="signup_error_empty_username">아이디를 입력해 주세요.</string>
    <string name="signup_error_empty_password">비밀번호를 입력해 주세요.</string>
    <string name="signup_error_invalid_username">아이디는 4~20자, 영문 소문자로 시작하고 소문자/숫자/_/.만 사용할 수 있습니다.</string>
    <string name="signup_error_invalid_password">비밀번호는 8~32자이며 영문과 숫자를 포함해야 합니다.</string>
    <string name="signup_error_password_mismatch">비밀번호가 일치하지 않습니다.</string>

    <string name="detail_delete_meeting">회의 삭제</string>
    <string name="detail_attendees_label">참석자</string>
    <string name="detail_attendees_empty">참석자 없음</string>
    <string name="detail_edit_meeting_info">회의 정보 수정</string>
    <string name="detail_label_date">날짜</string>
    <string name="detail_label_time">시간</string>
    <string name="detail_tab_summary">요약</string>
    <string name="detail_tab_files">파일</string>
    <string name="detail_section_summary">회의 요약</string>
    <string name="detail_edit_summary">회의 요약 수정</string>
    <string name="detail_section_decisions">결정 사항</string>
    <string name="detail_add_decision">결정 사항 추가</string>
    <string name="detail_section_actions">할 일</string>
    <string name="detail_add_action">할 일 추가</string>
    <string name="detail_decisions_empty">등록된 결정 사항이 없습니다.</string>
    <string name="detail_files_empty">첨부된 파일이 없습니다.</string>
    <string name="detail_download_file">파일 다운로드</string>
    <string name="detail_download_started">다운로드를 시작했습니다.</string>
    <string name="detail_download_failed">다운로드를 시작하지 못했습니다.</string>
    <string name="detail_file_not_found">파일을 찾을 수 없습니다.</string>
    <string name="detail_no_viewer_app">이 파일을 열 수 있는 앱이 없습니다.</string>
</resources>